# ARMv5-instruction-set-emulator

./: .gitignore  Dockerfile  Heures Projet.ods  Makefile  README.md  README.txt  arm_branch_other.c  arm_branch_other.h  arm_constants.h  arm_core.c  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  arm_simulator  config.h  config.status  memory.c  memory_test  memory_test.c  registers.c  registers.h  registers_test  registers_test.c  run.sh  run_docker.sh  send_irq
Examples/: Makefile  Makefile.am  example1  example10  example10.s  example11  example11.s  example12  example12.s  example13  example13.s  example14  example14.s  example15  example15.s  example16  example16.s  example17  example17.s  example18.s  example19.s  example2  example20.s  example21.s  example3  example3.s  example4  example5.s  example6  example6.s  example7  example7.s  example8  example8.s  example9  example9.s  insertion_sort
autom4te.cache/: output.2  requests  traces.0
